--- a/package.json
+++ b/package.json
@@ -13,19 +13,34 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "argon2": "^0.41.1",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
+    "bull": "^4.16.5",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
-    "puppeteer": "^24.4.0"
+    "pg": "^8.14.1",
+    "puppeteer": "^24.4.0",
+    "sequelize": "^6.37.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/argon2": "^0.14.1",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.11",
+    "@types/nodemailer": "^6.4.17",
+    "@types/pg": "^8.11.13",
     "typescript": "^5.8.2"
   }
 }
