--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pg": "^8.14.1",
     "puppeteer": "^24.4.0",
     "sequelize": "^6.37.7",
+    "stripe": "^18.1.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
