--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
+    "pino": "^9.9.0",
+    "pino-pretty": "^13.1.1",
     "puppeteer": "^24.4.0",
     "sequelize": "^6.37.7",
     "stripe": "^18.1.1",
