--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
     "pino": "^9.9.0",
+    "pino-http": "^10.5.0",
     "pino-pretty": "^13.1.1",
     "puppeteer": "^24.4.0",
     "sequelize": "^6.37.7",
