--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.21.2",
     "google-auth-library": "^9.15.1",
     "googleapis": "^154.1.0",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
     "morgan": "^1.10.0",
