--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.11",
     "@types/node-cron": "^3.0.11",
+    "@types/node-fetch": "^2.6.13",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.13",
     "typescript": "^5.8.2"
