--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pino-pretty": "^13.1.1",
     "puppeteer": "^24.4.0",
     "sequelize": "^6.37.7",
+    "socket.io": "^4.8.1",
     "stripe": "^18.1.1",
     "uuid": "^11.1.0"
   },
