--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
+    "pdf-parse": "^2.4.5",
     "pg": "^8.14.1",
     "pino": "^9.9.0",
     "pino-http": "^10.5.0",
