--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pino-http": "^10.5.0",
     "pino-pretty": "^13.1.1",
     "puppeteer": "^24.4.0",
+    "multer": "^1.4.5-lts.1",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
     "stripe": "^18.1.1",
@@ -55,6 +56,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/node-fetch": "^2.6.13",
     "@types/nodemailer": "^6.4.17",
+    "@types/multer": "^1.4.12",
     "@types/pg": "^8.11.13",
     "typescript": "^5.8.2"
   }
